...

                <EditText
                    android:id="@+id/edit_container_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_container_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_container_serial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_container_dateInUse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_canopy_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_canopy_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_canopy_serial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_canopy_dateInUse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_reserve_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_reserve_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_reserve_serial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_reserve_dateInUse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_aad_manufacturer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_aad_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_aad_serial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/edit_aad_dateInUse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

        <Button
            android:id="@+id/gear_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="Save" />

    </LinearLayout>
...
