<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:onClick="deleteDialog"
        android:title="Delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:onClick="editItem"
        android:title="Edit"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="Filter"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>
