...
        android:layout_marginRight="16dp"
        android:elevation="@dimen/default_elevation"
        app:backgroundTint="@color/primary"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <com.sa90.materialarcmenu.ArcMenu
        android:id="@+id/arcMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clipChildren="false"
        android:visibility="gone"
        app:menu_color="@color/primary"
...
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/gear_menu_rig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@android:color/transparent"
                app:backgroundTint="@color/primary_light" />

...
